--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
         <div>
             <label for="colorPicker">Pick a color:</label>
-            <input type="color" id="colorPicker">
+            <input type="color" id="color">
             <button id="applyColorBtn">Apply Color</button>
         </div>
         <div class="last">
